2011-06-02  Jeff Johnston  <jjohnstn@redhat.com>

	* *.html: Regenerate from wiki pages.

2010-10-21  Alexander Kurtakov  <akurtako@redhat.com>

	* lib/org.eclipse.mylyn.wikitext.core_1.3.0.I20100308-0400-e3x.jar: Removed.
	* lib/org.eclipse.mylyn.wikitext.mediawiki.core_1.3.0.I20100308-0400-e3x.jar: Removed.
	* userguide/Callgraph\ Reference-toc.xml: Removed.
	* userguide/Callgraph\ Reference.html: Removed.
	* userguide/Callgraph\ Reference.xml: Removed.
	* userguide/Callgraph-Perspectives.html: Removed.
	* userguide/Features.html: Removed.
	* userguide/General-Usage.html: Removed.
	* userguide/General-Usage2.html: Removed.
	* userguide/images/Callgraph_file_menu.png: Removed.
	* userguide/images/Callgraph_goto_menu.png: Removed.
	* userguide/images/eclipsecallgraph-agg.png: Removed.
	* userguide/images/eclipsecallgraph-collapse.png: Removed.
	* userguide/images/eclipsecallgraph-levelview.png: Removed.
	* userguide/images/eclipsecallgraph-profilewhich.png: Removed.
	* userguide/images/eclipsecallgraph-radialview.png: Removed.
	* userguide/images/eclipsecallgraph-thumb.png: Removed.
	* userguide/images/eclipsecallgraph-treeview.png: Removed.
	* userguide/images/Profile-screen.png: Removed.
	* userguide/images/Selectfilestoprobe.png: Removed.
	* userguide/Installation.html: Removed.
	* userguide/Updating-This-Document.html: Removed.
	* images/home.gif: New file.
	* images/next.gif: New file.
	* images/prev.gif: New file.
	* Linux_Tools_Project/Callgraph/User_Guide/Callgraph-Perspectives.html: New file.
	* Linux_Tools_Project/Callgraph/User_Guide/General-Usage.html: New file.
	* Linux_Tools_Project/Callgraph/User_Guide/General-Usage2.html: New file.
	* Linux_Tools_Project/Callgraph/User_Guide/images/Callgraph_file_menu.png: New file.
	* Linux_Tools_Project/Callgraph/User_Guide/images/Callgraph_goto_menu.png: New file.
	* Linux_Tools_Project/Callgraph/User_Guide/images/Eclipsecallgraph-agg.png: New file.