@@ -30,7 +30,7 @@
 			</tr>
 		</table><hr/>
 		<h1 id="General_Usage">General Usage</h1>
-		<p>All the profiling plugins (including Eclipse-Callgraph) are accessible from the C/C++ perspective. To start using Eclipse-Callgraph, right-click on a project then navigate to  
+		<p>All the profiling plugins (including Eclipse Callgraph) are accessible from the C/C++ perspective. To start using Eclipse Callgraph, right-click on a project then navigate to  
 			<b>Profile As &gt; Function callgraph</b>. 
 <center>
 
@@ -43,7 +43,7 @@
 			<img border="0" src="images/Eclipsecallgraph-profilewhich.png"/>
 </center>
 		</p>
-		<p>After selecting an executable to profile, Eclipse-Callgraph will ask which files to probe. By default, all source files in the project will be selected. 
+		<p>After selecting an executable to profile, Eclipse Callgraph will ask which files to probe. By default, all source files in the project will be selected. 
 <center>
 
 			<img border="0" src="images/Selectfilestoprobe.png"/>
