@@ -30,7 +30,7 @@
 			</tr>
 		</table><hr/>
 		<h1 id="General_Usage_2">General Usage</h1>
-		<p>Most of the Eclipse-Callgraph's general functions are available through the 
+		<p>Most of Eclipse Callgraph's general functions are available through the 
 			<b>Callgraph</b> view's toolbar and 
 			<b>View Menu</b>.
 		</p>
@@ -60,7 +60,7 @@
 			<b>Aggregate View</b>. Doing so will open the corresponding source file in the Eclipse editor and highlight the function definition.
 		</p>
 		<h2 id="Save.2Fload_profile_runs">Save/load profile runs</h2>
-		<p>Large projects may take longer to render; as such, Eclipse-Callgraph allows you to save the data collected from a profile run. Loading the data file and attempting to render it will take a much shorter time than attempting to go through the full process of profiling a project. </p>
+		<p>Large projects may take longer to render; as such, Eclipse Callgraph allows you to save the data collected from a profile run. Loading the data file and attempting to render it will take a much shorter time than attempting to go through the full process of profiling a project. </p>
 		<p>To save or load data from a profile run, navigate to 
 			<b>File</b> (under the 
 			<b>View Menu</b>); this will display different options relating to saving and loading profile runs.
