@@ -26,7 +26,7 @@
 			</tr>
 		</table><hr/>
 		<h1 id="Overview">Overview</h1>
-		<p>The Eclipse-Callgraph plug-in provides a visual function trace of a program. This allows you to view a visualization of selected (or even all) functions used by the profiled application. </p>
+		<p>The Eclipse Callgraph plug-in provides a visual function trace of a program. This allows you to view a visualization of selected (or even all) functions used by the profiled application. </p>
 		<p>This plug-in allows you to profile C/C++ projects directly within the Eclipse IDE, providing various runtime details such as: </p>
 		<ul>
 			<li>The relationship between function calls </li>
@@ -34,7 +34,7 @@
 			<li>Time taken by each instance of a function (relative to the program's execution time) </li>
 			<li>Time taken by all instances of a function (relative to program's execution time)</li>
 		</ul>
-		<p>Eclipse-Callgraph uses SystemTap to perform function traces. For more information about SystemTap, refer to the 
+		<p>Eclipse Callgraph uses SystemTap to perform function traces. For more information about SystemTap, refer to the 
 			<a href="http://sources.redhat.com/systemtap/SystemTap_Beginners_Guide/">SystemTap Beginner's Guide</a>. 
 		</p><hr/>
 		<table class="navigation" style="width: 100%;" border="0" summary="navigation">
